--- a/lab-3/ll-3-badge.Rmd
+++ b/lab-3/ll-3-badge.Rmd
@@ -43,20 +43,22 @@ Part B: Once again, use the institutional library (e.g. [NCSU Library](https://w
 
 For this data product, please add a feature (or several features) *specific to one or more of the activity types* in the OULAD interactions data, and then add these features to your model and evaluate the accuracy. How did the accuracy appreciably change--if at all? Please copy all of your code in one or more code chunks below.
 
-### Knit & Submit
+### Knit and Publish
 
-Congratulations, you've completed your Prediction badge! Complete the following steps to submit your work for review:
+Complete the following steps to knit and publish your work:
 
-1.  Change the name of the `author:` in the [YAML header](https://monashdatafluency.github.io/r-rep-res/yaml-header.html) at the very top of this document to your name. As noted in [Reproducible Research in R](https://monashdatafluency.github.io/r-rep-res/index.html), The YAML header controls the style and feel for knitted document but doesn't actually display in the final output.
+1.  First, change the name of the `author:` in the [YAML header](https://bookdown.org/yihui/rmarkdown-cookbook/rmarkdown-anatomy.html#yaml-metadata) at the very top of this document to your name. The YAML header controls the style and feel for knitted document but doesn't actually display in the final output.
 
-2.  Click the yarn icon above to "knit" your data product to a [HTML](https://bookdown.org/yihui/rmarkdown/html-document.html) file that will be saved in your R Project folder.
+2.  Next, click the knit button in the toolbar above to "knit" your R Markdown document to a [HTML](https://bookdown.org/yihui/rmarkdown/html-document.html) file that will be saved in your R Project folder. You should see a formatted webpage appear in your Viewer tab in the lower right pan or in a new browser window. Let's us know if you run into any issues with knitting.
 
-3.  Commit your changes in GitHub Desktop and push them to your online GitHub repository.
+3.  Finally, publish your webpage on Posit Cloud by clicking the "Publish" button located in the Viewer Pane after you knit your document. See screenshot below.
 
-4.  Publish your HTML page the web using one of the following [publishing methods](https://rpubs.com/cathydatascience/518692):
+![](img/knit-publish.png){width="80%"}
 
-    -   Publish on [RPubs](https://rpubs.com) by clicking the "Publish" button located in the Viewer Pane when you knit your document. Note, you will need to quickly create a RPubs account.
+### Receiving Your Machine Learning Badge
 
-    -   Publishing on GitHub using either [GitHub Pages](https://pages.github.com) or the [HTML previewer](http://htmlpreview.github.io).
+To receive credit for this assignment and earn your first official LASER Badge, share the link to published webpage under the next incomplete badge artifact column on the 2023 LASER Scholar Information and Documents spreadsheet: <https://go.ncsu.edu/laser-sheet>. 
 
-5.  Post a new discussion on GitHub to our [ML badges forum](https://github.com/orgs/laser-institute/teams/machine-learning/discussions/2). In your post, include a link to your published web page and a short reflection highlighting one thing you learned from this lab and one thing you'd like to explore further.
+Once your instructor has checked your link, you will be provided a physical version of the badge below!
+
+![](img/ML_FE_Hx.jpg){width="30%"}
