--- a/lab-2/ll-2-overview-presentation.Rmd
+++ b/lab-2/ll-2-overview-presentation.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Machine Learning Learning Lab 2: Feature Engineering"
+title: "Machine Learning Learning Lab 2: Interpretation"
 subtitle: "Overview Presentation"
 author: "**Dr. Joshua Rosenberg**"
 institute: "LASER Institute"
@@ -43,11 +43,11 @@ xaringanExtra::use_panelset()
 # these allow any code snippets to be copied to the clipboard so they 
 # can be pasted easily
 htmltools::tagList(
-  xaringanExtra::use_clipboard(
-    button_text = "<i class=\"fa fa-clipboard\"></i>",
-    success_text = "<i class=\"fa fa-check\" style=\"color: #90BE6D\"></i>",
-  ),
-  rmarkdown::html_dependency_font_awesome()
+    xaringanExtra::use_clipboard(
+        button_text = "<i class=\"fa fa-clipboard\"></i>",
+        success_text = "<i class=\"fa fa-check\" style=\"color: #90BE6D\"></i>",
+    ),
+    rmarkdown::html_dependency_font_awesome()
 )
 ```
 
@@ -65,7 +65,7 @@ xaringanExtra::use_tile_view()
 
 # Purpose and Agenda
 
-We have some data and want to develop a prediction model. Supervised machine learning is suited to this aim. In particular, in this learning lab, we explore how we can train a computer to predict students' withdrawal from a course. We use a large data set, the Open University Learning Analytics Dataset (OULAD), focusing on student data at this point. Our model at this point is relatively simple, a generalized linear model.
+How do we interpret a machine learning model? What else can we say, besides how accurate a model this? This learning lab is intended to help you to answer these questions by examining output from a classification and a regression model. We again use the OULAD, but add an assessment file.
 
 ## What we'll do in this presentation
 
@@ -81,27 +81,24 @@ We have some data and want to develop a prediction model. Supervised machine lea
 
 .panelset[
 
-.panel[.panel-name[Discussion]
+.panel[.panel-name[Background]
 
-- 
-- 
--
-    
-]
-
-.panel[.panel-name[Conceptual Overview]
-
-- 
-- 
--
+- We are likely familiar with _accuracy_ and maybe another measure, _Cohen's Kappa_
+- But, you may have heard of other means of determining how good a model is at making predictions: confusion matrices, specificity, sensitivity, recall, AUC-ROC, and others
+- Broadly, these help us to understand _for which cases and types of cases a model is predictively better than others_ in a finer-grained way than accuracy
 
 ]
+]
 
-.panel[.panel-name[Coding Walkthrough]
+.panel[.panel-name[Getting Started]
 
-- 
-- 
-- 
+Think broadly and not formally (yet): What makes a prediction model a good one?
+
+]
+
+.panel[.panel-name[Digging Deeper]
+
+After having worked through the first learning lab, have your thoughts on what data you might use for a machine learning study evolved? If so, in what ways? If not, please elaborate on your initial thoughts and plans.
 
 ]
 ]
@@ -112,30 +109,85 @@ We have some data and want to develop a prediction model. Supervised machine lea
 
 .panelset[
 
-.panel[.panel-name[Discussion]
+.panel[.panel-name[Accuracy]
 
-- 
-- 
--
-    
-]
+Let's start with accuracy and a simple confusion matrix; what is the **Accuracy**?
 
-.panel[.panel-name[Conceptual Overview]
-
-- 
-- 
--
+```{r, echo = FALSE, message = FALSE, out.}
+readr::read_csv("data/sample-table.csv") %>% 
+    slice(1:5) %>% 
+    knitr::kable()
+```
 
 ]
 
-.panel[.panel-name[Coding Walkthrough]
+.panel[.panel-name[Accuracy]
 
-- 
-- 
-- 
+Use the `tabyl()` function (from {janitor} to calculate the accuracy in the code chunk below.
+
+```{r}
+library(janitor)
+data_for_conf_mat %>% 
+    mutate(correct = Outcome == Prediction) %>% 
+    tabyl(correct)
+```
+
+]
+
+
+
+.panel[.panel-name[Conf Mat]
+
+Now, let's create a confusion matrix based on this data:
+
+.code80.remark-code[
+```{r}
+library(tidymodels)
+
+data_for_conf_mat <- tibble(Outcome = c(1, 0, 0, 1, 1),
+                            Prediction = c(1, 0, 1, 0, 1)) %>% 
+    mutate_all(as.factor)
+
+data_for_conf_mat %>% 
+    conf_mat(Outcome, Prediction)
+```
+]
+]
+
+
+.panel[.panel-name[Conf Mat]
+
+You can think of the following statistics as slicing and dicing the confusion matrix you created above, revealing insights in the process. For the below, please add the values based on the above confusion matrix.
+
+Accuracy: Proportion of the population that is true positive or true negative
+
+True positive (TP): Proportion of the population that is affected by a condition and correctly tested positive
+
+True negative (TN): Proportion of the population that is not affected by a condition and correctly tested negative
+
+False positive (FP): Proportion of the population that is not affected by a condition and incorrectly tested positive
+
+False negative (FN): Proportion of the population that is affected by a condition and incorrectly tested positive.
+
+]
+
+
+.panel[.panel-name[Conf Mat]
+
+
+![](img/conf-mat-descriptor.png)
+
+]
+
+
+.panel[.panel-name[Metrics]
+
+![](img/interpretation-of-metrics.png)
+
 
 ]
 ]
+
 
 ---
 
@@ -143,29 +195,104 @@ We have some data and want to develop a prediction model. Supervised machine lea
 
 .panelset[
 
-.panel[.panel-name[Discussion]
+.panel[.panel-name[0]
 
-- 
-- 
--
-    
-]
+**Loading, setting up: create a .R file in /lab-1 and run this code**
 
-.panel[.panel-name[Conceptual Overview]
+```{r, eval = FALSE, echo = TRUE}
+library(tidyverse)
+library(tidymodels)
 
-- 
-- 
--
+starwars_recoded <- starwars %>% # built-in data available just by typing
+    mutate(species_human = ifelse(species == "Human", 1, 0), # recoding species to create a 0-1 outcome 
+           species_human = as.factor(species_human)) # changing to a factor
 
-]
-
-.panel[.panel-name[Coding Walkthrough]
-
-- 
-- 
-- 
+starwars_recoded %>% 
+    count(species) # how many humans are there?
+```
 
 ]
+
+.panel[.panel-name[1]
+
+**Split data**
+
+```{r, echo = TRUE, eval = FALSE}
+train_test_split <- initial_split(starwars_recoded, prop = .80)
+
+data_train <- training(train_test_split)
+data_test <- testing(train_test_split)
+```
+
+]
+
+.panel[.panel-name[2]
+
+**Engineer features**
+
+```{r, echo = TRUE, eval = FALSE}
+# predicting humans based on the variables we used in LL1 + birth_year and homeworld
+my_rec <- recipe(species_human ~ height + mass + birth_year + eye_color, data = data_train)
+```
+
+]
+
+.panel[.panel-name[3]
+
+**Specify recipe, model, and workflow**
+
+```{r, echo = TRUE, eval = FALSE}
+# specify model
+my_mod <-
+    logistic_reg() %>% 
+    set_engine("glm") %>%
+    set_mode("classification")
+
+# specify workflow
+my_wf <-
+    workflow() %>%
+    add_model(my_mod) %>% 
+    add_recipe(my_rec) %>% 
+    step_dummy(eye_color) # we need to dummy code this
+```
+
+]
+
+.panel[.panel-name[4]
+
+**Fit model**
+
+```{r, echo = TRUE, eval = FALSE}
+fitted_model <- fit(my_wf, data = data_train) # ignore warning for this example
+class_metrics <- metric_set(accuracy, sensitivity, specificity, ppv, npv, kap) # this is new
+final_fit <- last_fit(fitted_model, train_test_split)
+```
+
+]
+
+.panel[.panel-name[5]
+
+**Evaluate accuracy**
+
+```{r, echo = TRUE, eval = FALSE}
+final_fit %>%
+    collect_metrics()
+```
+
+]
+
+.panel[.panel-name[6]
+
+**Aside: joining data**
+
+```{r, echo = TRUE, eval = FALSE}
+band_members %>% left_join(band_instruments)
+band_members %>% inner_join(band_instruments)
+```
+
+]
+
+
 ]
 
 ---
@@ -174,29 +301,18 @@ We have some data and want to develop a prediction model. Supervised machine lea
 
 .panelset[
 
-.panel[.panel-name[Discussion]
+.panel[.panel-name[Getting Started]
 
-- 
-- 
--
-    
-]
 
-.panel[.panel-name[Conceptual Overview]
-
-- 
-- 
--
 
 ]
 
-.panel[.panel-name[Coding Walkthrough]
+.panel[.panel-name[Digging Deeper]
 
-- 
-- 
-- 
+Why not use our testing data to evaluate how good our model is?
 
 ]
+
 ]
 
 ---
@@ -205,27 +321,26 @@ We have some data and want to develop a prediction model. Supervised machine lea
 
 .panelset[
 
-.panel[.panel-name[Discussion]
+.panel[.panel-name[Reading]
 
-- 
-- 
--
-    
-]
-
-.panel[.panel-name[Conceptual Overview]
-
-- 
-- 
--
+Baker, R. S., Berning, A. W., Gowda, S. M., Zhang, S., & Hawn, A. (2020). Predicting K-12 dropout. *Journal of Education for Students Placed at Risk, 25*(1), 28-54.
 
 ]
 
-.panel[.panel-name[Coding Walkthrough]
+.panel[.panel-name[Case Study]
 
-- 
-- 
-- 
+- Adding another data source from the [OULAD](https://analyse.kmi.open.ac.uk/open_dataset), assessments data
+- Interpreting each of the metrics in greater detail
+- Using `metric_set`
+
+]
+
+.panel[.panel-name[Badge]
+
+- Adding still another variable
+- Stepping back and interpreting the model as a whole
+- Finding another relevant study 
 
 ]
 ]
+
