--- a/lab-3/ll-3-overview-presentation.Rmd
+++ b/lab-3/ll-3-overview-presentation.Rmd
@@ -63,12 +63,14 @@ xaringanExtra::use_tile_view()
 
 # Purpose and Agenda
 
-We have some data and want to develop a prediction model. Supervised machine learning is suited to this aim. In particular, in this learning lab, we explore how we can train a computer to predict students' withdrawal from a course. We use a large data set, the Open University Learning Analytics Dataset (OULAD), focusing on student data at this point. Our model at this point is relatively simple, a generalized linear model.
+How do we interpret a machine learning model? What else can we say, besides how accurate a model this? This learning lab is intended to help you to answer these questions by examining output from a classification and a regression model. We again use the OULAD, but add an assessment file.
 
 ## What we'll do in this presentation
 
 - Discussion 1
-- Key Concepts
+- Key Concept: Feature Engineering
+- Key Concept: Resampling and cross-validation
+- Key Concept: The Random Forest algorithm
 - Code-along
 - Discussion 2
 - Introduction to the other parts of this learning lab
@@ -79,91 +81,357 @@ We have some data and want to develop a prediction model. Supervised machine lea
 
 .panelset[
 
-.panel[.panel-name[Discussion]
+.panel[.panel-name[Background]
 
-- 
-- 
--
+- Having discussed ways of interpreting how good a predictive model is, we can consider how to make our model better, having a rigorous framework for answering that question.
     
 ]
 
 .panel[.panel-name[Conceptual Overview]
 
-- 
-- 
--
+- How good is a good enough model _for which metrics_?
 
 ]
 
 .panel[.panel-name[Coding Walkthrough]
 
-- 
-- 
-- 
+- For your research context, how predictively good does your model need to be to be used with actual people (i.e., teachers, administrators, parents, and students)?
 
 ]
 ]
 
 ---
 
-# Key Concepts
+# Key Concept: Features and Feature Engineering
 
 .panelset[
 
-.panel[.panel-name[Discussion]
+.panel[.panel-name[Why?]
 
-- 
-- 
--
+Let's consider a very simple data set, `d`, one with _time_point_ data, `var_a`, for a single student. How do we add this to our model?
+
+```{r, include = FALSE}
+d <- tibble(student_id = "janyia", time_point = 1:10, var_a = c(0.01, 0.32, 0.32, 0.34, 0.04, 0.54, 0.56, 0.75, 0.63, 0.78))
+```
+
+```{r}
+d %>% head(3)
+```
+
+]
+
+.panel[.panel-name[Why?]
+
+```{r, out.width="30%"}
+d %>% 
+    ggplot(aes(x = time_point, y = var_a)) +
+    geom_point()
+```
+
+]
+
+.panel[.panel-name[How?]
+
+- Well, what if we just add the values for these variables directly
+- But, that ignores that they are at different time points
+    - We could include the time point variable, but that is (about) the same for every student
     
+*What are some other ideas?*
 ]
 
-.panel[.panel-name[Conceptual Overview]
+.panel[.panel-name[How?]
 
-- 
-- 
--
+# A few (other) options
+
+- Raw data points
+- Their mean
+- Their maximum
+- Their variability (standard deviation)
+- Their linear slope
+- Their quadratic slope
+
+**Each of these may derive from a single _variable_ but may offer predictive utility as distinct _features_**
 
 ]
 
-.panel[.panel-name[Coding Walkthrough]
+.panel[.panel-name[How?]
 
-- 
-- 
-- 
+Here's a time stamp:
+
+```{r, echo = FALSE}
+Sys.time()
+```
+
+**How could this variable be used as a predictor variable?**
+
+]
+
+.panel[.panel-name[How?]
+
+- We can do all of these things **manually**
+- But, there are also helpful "**{recipes}**" functions to do this
+- Any, the {recipes} package makes it practical to carry out feature engineering steps for not only single variables, but groups of variables (or all of the variables)
+- Examples, all of which start with `step()`, e.g. `step_dummy()`
+
+]
+
+
+.panel[.panel-name[How?]
+
+- Removing those with "near-zero variance"
+- Removing ID variables and others that _should not be_ informative
+- Imputing missing values
+- Extract particular elements (i.e., particular _days_ or _times_) from time-related data 
+- Categorical variables: Dummy coding, combining categories
+- Numeric variables: Normalizing ("standardizing")
+
+**In this lab, we focus on using [OULAD data](https://analyse.kmi.open.ac.uk/open_dataset) on interactions**
 
 ]
 ]
 
 ---
 
-# Code-along
+# Key Concept: Resampling and cross-validation
 
 .panelset[
 
-.panel[.panel-name[Discussion]
+.panel[.panel-name[Data]
 
-- 
-- 
--
+# The importance of training data
+
+- Training data is what we use to "learn" from data
+- A "check" on your work is your predictions on _test_ set data
+  - *Train data*: Outcome data that you use to fit your model
+  - *Validation data<sup>1</sup>*: Data you use to select a particular algorithm (not often used, as we'll discuss!)
+  - *Test ("hold-out") data*: Data that you do not use in any way to train your model
+
+]
+
+.panel[.panel-name[Data]
+
+In LL1, we fit and interpreted a single _fit of our model_ (80% training, 20% testing). What if we decided to _add new features_ or _change existing features_?
+
+We'd need to use the same training data to tune a new model---and the same testing data to evaluate its performance. **But**, this could lead to fitting a model based on how well we predict the data that happened to end up in the test set. 
+
+We could be optimizing our model for our testing data; when used with new data, our model could make poor predictions.
+
+]
+
+.panel[.panel-name[Data]
+
+- In short, a challenges arises when we wish to use our training data _more than once_
+
+- Namely, if we repeatedly training an algorithm on the same data and then make changes, we may be tailoring our model to specific features of the testing data
+
+- This is a _very common and pervasive problem_ in machine learning applications
+
+- Resampling conserves our testing data; we don't have to spend it until we've finalized our model
+
+]
+
+.panel[.panel-name[Data]
+
+- Resampling involves blurring the boundaries between training and testing data, _but only for the training split of the data_
+
+- Specifically, it involves combining these two portions of our data into one, iteratively considering some of the data to be for "training" and some for "testing"
+
+- Then, fit measures are **averaged** across these different samples
+
+]
+
+
+.panel[.panel-name[KFCV]
+
+## *k*-folds cross validation (KFCV)
+
+- One of the most common forms of resampling is *k*-folds cross validation
+    - Here, some of the data is considered to be a part of the *training* set 
+    - The remaining data is a part of the *testing* set
+- How many sets (samples taken through resampling)?
+    - This is determined by _k_, number of times the data is resampled
+    - When _k_ is equivalent to the number of rows in the data, i.e. "Leave One Out Cross-Validation" (LOOCV) 
+
+
+]
+
+.panel[.panel-name[KFCV]
+
+```{r, include = FALSE}
+d <- tibble(id = 1:100, var_a = runif(100), var_b = runif(100))
+```
+
+```{r}
+d %>% head(3)
+```
+
+Using _k_ = 10, how can we split *n* = 100 cases into ten distinct training and testing sets?
+
+*First resampling*
+
+```{r, echo = TRUE}
+train <- d[1:90, ]
+test <- d[91:100, ]
+# then, train the model (using train) and calculate a fit measure (using test)
+# repeat for train: 1:80, 91:100, test: 81:90, etc.
+# ... through the tenth resampling, after which the fit measures are averaged
+```
+
+]
+
+
+.panel[.panel-name[Determining k]
+
+# But how do you determine what _k_ should be?
+
+- A _historically common value_ for _k_ has been 10
+- But, as computers have grown in processing power, setting _k_ equal to the number of rows in the data has become more common
+
+]
+]
+
+---
+
+# Random Forests
+
+.panelset[
+
+.panel[.panel-name[Background]
+
+- *Random forests* are extensions of classification trees
+- _Classification trees_ are a type of algorithm that use conditional logic ("if-then" statements) in a _nested_ manner
+    - For instance, here's a _very, very_ simple tree (from [APM](https://link.springer.com/book/10.1007/978-1-4614-6849-3)):
+
+]
+
+.panel[.panel-name[Algorithm]
+
+```{code, echo = TRUE}
+if Predictor B >= 0.197 then
+| if Predictor A >= 0.13 then Class = 1
+| else Class = 2
+else Class = 2
+```
+
+- Measures are used to determine the splits in such a way that classifies observations into small, homogeneous groups (using measures such as the Gini index and entropy measure)
+
+]
+
+.panel[.panel-name[More complexity]
+
+```{code, echo = TRUE}
+if Predictor B >= 0.197 then
+| if Predictor A >= 0.13 then
+    | if Predictor C < -1.04 then Class = 1
+    | else Class = 2
+else Class = 3
+```
+
+As you can imagine, with many variables, these trees can become very complex
+
+]
+
+.panel[.panel-name[Takeaways]
+
+- Random forest is an extension of decision tree modeling whereby a collection of decision trees are sequentially **estimated using training data** - and **validated/tested using testing data**
+- Different _samples_ of predictors are sampled for inclusion in each individual tree
+- Highly complex and non-linear relationships between variables can be estimated
+- Each tree is independent of every other tree  
+- For classification ML, the final output is the category/group/class selected by individual trees
+- For regression ML, the mean or average prediction of the individual trees is returned
+]
+
+.panel[.panel-name[For later]
+
+- There are several important tuning parameters for these models:
+    - the number of predictor variables that are randomly sampled for each split (`mtry`)
+    - the minimum number of data points required to execute a split into branches (`min_n`)
+    - the number of trees estimated as a part of the "forest" (`trees`)
+- These tuning parameters, broadly, balance predictive performance with the training data with how well the model will perform on new data 
+
+]
+]
+
+---
+
+
+# Coding Walkthrough
+
+.panelset[
+
+.panel[.panel-name[ggplot2]
+
+```{r, eval = FALSE, echo = TRUE}
+library(ggrepel)
+
+ggplot(starwars, aes(x = height, label = name)) +
+    geom_histogram()
+```
+
+]
+
+.panel[.panel-name[ggplot2]
+
+```{r, eval = FALSE, echo = TRUE}
+library(ggrepel)
+
+ggplot(starwars, aes(x = height, y = mass, label = name)) +
+    geom_point() +
+    geom_label_repel()
+```
+]
+
+
+.panel[.panel-name[vfcv]
+
+```{r, eval = FALSE, echo = TRUE}
+# during Step 1
+kfcv <- vfold_cv(data_train, v = 20) # this differentiates this from what we did before
+# before, we simple used data_train to fit our model
+kfcv
+```
+]
+
+.panel[.panel-name[vfcv]
+
+```{r, eval=FALSE}
+# during step 3
+my_mod <- rand_forest(mtry = tune(), # this specifies that we'll take steps later to tune the model
+                min_n = tune(),
+                trees = tune()) %>%
+    set_engine("ranger", importance = "impurity") %>%
+    set_mode("classification")
+```
+
+]
+
+.panel[.panel-name[vfcv]
+```{r, eval = FALSE, echo = TRUE}
+# during Step 4
+fitted_model_resamples <- fit_resamples(my_wf, resamples = vfcv, metrics = class_metrics) # instead of fit()
+```
+]
+
+.panel[.panel-name[vfcv]
+
+```{r, eval = FALSE, echo = TRUE}
+# during Step 5
+collect_metrics(fitted_model_resamples)
+```
+]
+
+.panel[.panel-name[vip]
+
+```{r, eval = FALSE, echo = TRUE}
+# during Step 5
+final_fit %>% 
+    pluck(".workflow", 1) %>%   
+    pull_workflow_fit() %>% 
+    vip(num_features = 10)
+```
+]
+
     
-]
-
-.panel[.panel-name[Conceptual Overview]
-
-- 
-- 
--
-
-]
-
-.panel[.panel-name[Coding Walkthrough]
-
-- 
-- 
-- 
-
-]
 ]
 
 ---
@@ -172,27 +440,16 @@ We have some data and want to develop a prediction model. Supervised machine lea
 
 .panelset[
 
-.panel[.panel-name[Discussion]
+.panel[.panel-name[Getting Started]
 
-- 
-- 
--
-    
-]
-
-.panel[.panel-name[Conceptual Overview]
-
-- 
-- 
--
+- Why is resampling (cross-validation) important?
 
 ]
 
-.panel[.panel-name[Coding Walkthrough]
+.panel[.panel-name[Digging Deeper]
 
-- 
-- 
-- 
+
+- Which feature engineering steps might you need to take with the data (or kind of data) you plan to use?
 
 ]
 ]
@@ -203,27 +460,28 @@ We have some data and want to develop a prediction model. Supervised machine lea
 
 .panelset[
 
-.panel[.panel-name[Discussion]
+.panel[.panel-name[Readings]
 
-- 
-- 
--
+Rodriguez, F., Lee, H. R., Rutherford, T., Fischer, C., Potma, E., & Warschauer, M. (2021, April). Using clickstream data mining techniques to understand and support first-generation college students in an online chemistry course. In *LAK21: 11th International Learning Analytics and Knowledge Conference* (pp. 313-322). https://github.com/laser-institute/essential-readings/blob/main/machine-learning/ml-lab-2/rodriguez-et-al-2021-lak.pdf
+
+Gobert, J. D., Sao Pedro, M., Raziuddin, J., & Baker, R. S. (2013). From log files to assessment metrics: Measuring students' science inquiry skills using educational data mining. *Journal of the Learning Sciences, 22*(4), 521-563. https://github.com/laser-institute/essential-readings/blob/main/machine-learning/ml-lab-3/gobert-et-al-2013-jls.pdf
     
-]
-
-.panel[.panel-name[Conceptual Overview]
-
-- 
-- 
--
+Baker, R. S., Esbenshade, L., Vitale, J., & Karumbaiah, S. (2023). Using Demographic Data as Predictor Variables: a Questionable Choice. *Journal of Educational Data Mining, 15*(2), 22-52.
 
 ]
 
-.panel[.panel-name[Coding Walkthrough]
+.panel[.panel-name[Case Study]
 
-- 
-- 
-- 
+- Using interaction data
+- Adding features 
+- Interpreting the change in our predictions
+
+]
+
+.panel[.panel-name[Badge]
+
+- Considering the use of demographic data as features 
+- Adding _activity-specific_ interaction types
 
 ]
 ]
