--- a/lab-3/ll-3-case-study.Rmd
+++ b/lab-3/ll-3-case-study.Rmd
@@ -31,9 +31,9 @@ communities.
 
 Consider research on online learning and the work of Rodriguez et al.
 (2021). In these two studies, *digital trace data*, data generated
-through users' interactions with digital technologies. Review this paper
--- specifically how they processed the "clickstream" data. As this paper
-illustrates, there is not one way to use such data.
+through users' interactions with digital technologies. Optionally,
+review this paper -- specifically how they processed the "clickstream"
+data. As this paper illustrates, there is not one way to use such data.
 
 > Rodriguez, F., Lee, H. R., Rutherford, T., Fischer, C., Potma, E., &
 > Warschauer, M. (2021, April). Using clickstream data mining techniques
@@ -46,8 +46,8 @@ Notably, the authors took several steps to prepare the data so that it
 could be validly interpreted. The same is true here in the context of
 machine learning. In a different context, the work of Gobert et al.
 (2013) is a great example of using data from educational simulations.
-Please review this paper, too, focused on their use of a technique they
-called *replay tagging* to conduct feature engineering.
+Optionally review this paper, too, focused on their use of a technique
+they called *replay tagging* to conduct feature engineering.
 
 > Gobert, J. D., Sao Pedro, M., Raziuddin, J., & Baker, R. S. (2013).
 > From log files to assessment metrics: Measuring students' science
