--- a/lab-3/ll-3-overview-presentation.Rmd
+++ b/lab-3/ll-3-overview-presentation.Rmd
@@ -461,13 +461,10 @@ final_fit %>%
 .panelset[
 
 .panel[.panel-name[Readings]
-
-Rodriguez, F., Lee, H. R., Rutherford, T., Fischer, C., Potma, E., & Warschauer, M. (2021, April). Using clickstream data mining techniques to understand and support first-generation college students in an online chemistry course. In *LAK21: 11th International Learning Analytics and Knowledge Conference* (pp. 313-322). https://github.com/laser-institute/essential-readings/blob/main/machine-learning/ml-lab-2/rodriguez-et-al-2021-lak.pdf
-
-Gobert, J. D., Sao Pedro, M., Raziuddin, J., & Baker, R. S. (2013). From log files to assessment metrics: Measuring students' science inquiry skills using educational data mining. *Journal of the Learning Sciences, 22*(4), 521-563. https://github.com/laser-institute/essential-readings/blob/main/machine-learning/ml-lab-3/gobert-et-al-2013-jls.pdf
     
 Baker, R. S., Esbenshade, L., Vitale, J., & Karumbaiah, S. (2023). Using Demographic Data as Predictor Variables: a Questionable Choice. *Journal of Educational Data Mining, 15*(2), 22-52.
 
+And Rodriguez et al. (2021) and Gobert et al. (2013) (*optional*)
 ]
 
 .panel[.panel-name[Case Study]
